# ProteinPersistence

./: .gitmodules  CMakeLists.txt  CMakelists.txt  README.md  install.sh  setup.py
.install/: build.sh  parse.sh
doc/: HackathonPresentation-Persistence.ipynb  PDB_Persistence_Tutorial.ipynb
scripts/: Compute_PDB_Diagrams.py  vectorize_diagrams.py
src/: CMakeLists.txt  pdb2persistence.cpp  pers_weighted_alpha_3d.cpp
test/: d1a26a1.txt
